--- a/docs/src/learn/content/02-setup-and-first-run.mdx
+++ b/docs/src/learn/content/02-setup-and-first-run.mdx
@@ -1,52 +1,56 @@
-## How people start with Mastra
+This lesson walks through scaffolding a Mastra project and opening Studio for the first time. You'll run the default Weather agent, get a feel for the key Studio areas, and end with a local dev environment you'll use for the rest of the course.
 
-There are three main paths:
+## Three ways to start with Mastra
 
-1. **Integrate with your framework** — add Mastra to an existing project, then call agents and workflows from your app's routes or server logic
-2. **Scaffold a new project** — use `create-mastra` to generate a runnable example you can adapt
-3. **Start from a template** — use a pre-built starting point when you already have a use case in mind
+1. **Integrate into an existing app**: add Mastra to your current stack. Mastra has guides for Next.js, React + Vite, SvelteKit, Astro, Nuxt, Express, and Hono
+2. **Scaffold a new project**: use `create-mastra` to generate a project with a working example agent you can run immediately
+3. **Start from a template**: use a pre-built template when you already have a specific use case in mind
 
-This course takes path 2: we'll scaffold a project and iterate entirely in **Mastra Studio** before worrying about UI integration.
+This course uses path 2. We scaffold first, iterate in Studio, then wire into an app once the agent behavior is solid.
 
-## Scaffold and run
+## Scaffold the project
+
+You'll need an API key from a supported model provider before running setup (OpenAI, Anthropic, Google, etc.).
+
+Run whichever package manager you use:
 
 ```bash
-npx create-mastra@latest my-project
-cd my-project
-pnpm install
+npm create mastra@latest
 ```
 
-Add your LLM provider key to `.env`:
-
 ```bash
-OPENAI_API_KEY=sk-...
+pnpm create mastra
 ```
 
-Then start the dev server:
+```bash
+yarn create mastra
+```
+
+During setup you'll be asked for a project name, source directory, model provider, and API key. You'll also choose between **Skills** (recommended) and the **MCP Docs Server**. Both are covered in a later lesson.
+
+## Start the dev server
 
 ```bash
+cd theme-park-agent
 pnpm dev
 ```
 
-## Meet Mastra Studio
+The terminal prints a few URLs. One is for **Mastra Studio**, another exposes a **REST API** for your agent. The REST API is what you'll eventually call from your app. For now, open Studio at `http://localhost:4111`.
 
-Studio opens at `http://localhost:4111`. It's an interactive UI for building and testing agents — plus a local REST API that exposes your Mastra app as a service.
+## Studio areas
 
-The key areas:
+Studio is where you develop and test. You'll bounce between these sections constantly:
 
-- **Agents** — chat with your agents, adjust settings, test prompts
-- **Tools** — run tools in isolation to verify inputs and outputs
-- **Workflows** — execute step-by-step runs and inspect each step
-- **Traces** — see exactly what happened: model calls, tool executions, errors
+- **Agents**: chat with an agent directly. The fastest loop for testing prompts, tool calls, and multi-turn behavior
+- **Tools**: run tools in isolation. Use this to test or debug a tool without going through an agent conversation
+- **Workflows**: run workflows step-by-step and see execution paths
+- **Observability**: inspect traces after a run. Model calls, tool results, errors, and what the model received as input
 
-Studio is your development environment. It's where you'll iterate for the rest of this course. It is _not_ the thing you ship to end users — that comes later when we talk about deployment.
+Traces are your primary debugging tool. Every time the output surprises you, that's where you look.
 
-## The local dev loop
+## Go deeper
 
-The workflow you'll repeat throughout this course:
-
-1. Change code (agent instructions, tools, workflows)
-2. Restart the dev server
-3. Test in Studio
-4. Inspect traces to understand what happened
-5. Repeat
+- [Getting started](https://mastra.ai/docs/getting-started/start): all ways to start a Mastra project
+- [Mastra Studio](https://mastra.ai/docs/getting-started/studio): what Studio shows and how to use it
+- [Framework integration guides](https://mastra.ai/guides/getting-started/next-js): adding Mastra to an existing app
+- [Supported model providers](https://mastra.ai/models): OpenAI, Anthropic, Google, and more
