--- a/docs/src/content/en/docs/datasets/running-experiments.mdx
+++ b/docs/src/content/en/docs/datasets/running-experiments.mdx
@@ -8,7 +8,7 @@ packages:
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
 
-# Running experiments
+# Running Experiments
 
 An experiment runs every item in a dataset through a target — an agent, a workflow, or a scorer — then optionally scores the outputs. Use a scorer as the target when you want to evaluate an LLM judge itself. Results are persisted to storage so you can compare runs across different prompts, models, or code changes.
 
@@ -132,7 +132,7 @@ for (const item of summary.results) {
 
 :::info
 
-Visit the [Scorers overview](/docs/evals/overview) for details on built-in and custom scorers.
+Visit the [Scorers overview](/docs/evals/overview) for details on available and custom scorers.
 
 :::
 
