--- a/docs/src/content/en/docs/observability/datasets/running-experiments.mdx
+++ b/docs/src/content/en/docs/observability/datasets/running-experiments.mdx
@@ -281,7 +281,7 @@ Visit the [`startExperiment` reference](/reference/datasets/startExperiment) for
 
 ## Related
 
-- [Datasets overview](/docs/datasets/overview)
+- [Datasets overview](/docs/observability/datasets/overview)
 - [Scorers overview](/docs/evals/overview)
 - [`startExperiment` reference](/reference/datasets/startExperiment)
 - [`listExperimentResults` reference](/reference/datasets/listExperimentResults)
