--- a/docs/src/content/en/docs/observability/datasets/overview.mdx
+++ b/docs/src/content/en/docs/observability/datasets/overview.mdx
@@ -10,6 +10,8 @@ import StepItem from "@site/src/components/StepItem";
 
 # Datasets Overview
 
+**Added in:** `@mastra/core@1.4.0`
+
 Datasets are collections of test cases that you run experiments against to measure how well your agents and workflows perform. Each mutation creates a new version, so you can reproduce past experiments exactly. Pair datasets with [scorers](/docs/evals/overview) to track quality across prompts, models, or code changes.
 
 ## Usage
