--- a/docs/src/content/en/docs/observability/datasets/running-experiments.mdx
+++ b/docs/src/content/en/docs/observability/datasets/running-experiments.mdx
@@ -10,6 +10,8 @@ import TabItem from "@theme/TabItem";
 
 # Running Experiments
 
+**Added in:** `@mastra/core@1.4.0`
+
 An experiment runs every item in a dataset through a target (an agent, a workflow, or a scorer) and then optionally scores the outputs. Use a scorer as the target when you want to evaluate an LLM judge itself. Results are persisted to storage so you can compare runs across different prompts, models, or code changes.
 
 ## Basic experiment
