--- a/docs/src/content/en/reference/datasets/addItem.mdx
+++ b/docs/src/content/en/reference/datasets/addItem.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.addItem()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Adds a single item to the dataset. Each item has an input, optional ground truth, and optional metadata.
 
 ## Usage example
