--- a/docs/src/content/en/reference/datasets/compareExperiments.mdx
+++ b/docs/src/content/en/reference/datasets/compareExperiments.mdx
@@ -7,6 +7,8 @@ packages:
 
 # DatasetsManager.compareExperiments()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Compares two or more experiments, producing per-item and per-scorer comparisons. Requires at least two experiment IDs.
 
 ## Usage example
