--- a/docs/src/content/en/reference/datasets/getDetails.mdx
+++ b/docs/src/content/en/reference/datasets/getDetails.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.getDetails()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Retrieves the full dataset record from storage, including metadata, schemas, and version information.
 
 ## Usage example
