--- a/docs/src/content/en/reference/datasets/getItemHistory.mdx
+++ b/docs/src/content/en/reference/datasets/getItemHistory.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.getItemHistory()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Retrieves the full SCD-2 (Slowly Changing Dimension Type 2) history of a specific item across all dataset versions.
 
 ## Usage example
