--- a/docs/src/content/en/reference/datasets/startExperimentAsync.mdx
+++ b/docs/src/content/en/reference/datasets/startExperimentAsync.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.startExperimentAsync()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Starts an experiment asynchronously (fire-and-forget). Returns immediately with the experiment ID and a `'pending'` status. The experiment runs in the background.
 
 ## Usage example
