--- a/docs/src/content/en/reference/datasets/addItems.mdx
+++ b/docs/src/content/en/reference/datasets/addItems.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.addItems()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Adds multiple items to the dataset in a single bulk operation.
 
 ## Usage example
