--- a/docs/src/content/en/reference/datasets/create.mdx
+++ b/docs/src/content/en/reference/datasets/create.mdx
@@ -7,6 +7,8 @@ packages:
 
 # DatasetsManager.create()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Creates a new dataset. Zod schemas passed as `inputSchema` or `groundTruthSchema` are automatically converted to JSON Schema.
 
 ## Usage example
