--- a/docs/src/content/en/reference/datasets/dataset.mdx
+++ b/docs/src/content/en/reference/datasets/dataset.mdx
@@ -7,6 +7,8 @@ packages:
 
 # Dataset Class
 
+**Added in:** `@mastra/core@1.4.0`
+
 The `Dataset` class provides methods for item CRUD, versioning, and experiment management on a single dataset. Obtained via `mastra.datasets.get()` or `mastra.datasets.create()`.
 
 ## Usage examples
