--- a/docs/src/content/en/reference/datasets/datasets-manager.mdx
+++ b/docs/src/content/en/reference/datasets/datasets-manager.mdx
@@ -7,6 +7,8 @@ packages:
 
 # DatasetsManager
 
+**Added in:** `@mastra/core@1.4.0`
+
 The `DatasetsManager` class provides the public API for managing datasets, including CRUD operations and cross-dataset experiment comparisons. Access it via `mastra.datasets`.
 
 ## Usage examples
