--- a/docs/src/content/en/reference/datasets/delete.mdx
+++ b/docs/src/content/en/reference/datasets/delete.mdx
@@ -7,6 +7,8 @@ packages:
 
 # DatasetsManager.delete()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Deletes a dataset by ID, including all items, versions, and experiments.
 
 ## Usage example
