--- a/docs/src/content/en/reference/datasets/deleteExperiment.mdx
+++ b/docs/src/content/en/reference/datasets/deleteExperiment.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.deleteExperiment()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Deletes an experiment (run) by ID, including all associated results.
 
 ## Usage example
