--- a/docs/src/content/en/reference/datasets/deleteItem.mdx
+++ b/docs/src/content/en/reference/datasets/deleteItem.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.deleteItem()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Deletes a single item from the dataset by ID.
 
 ## Usage example
