--- a/docs/src/content/en/reference/datasets/deleteItems.mdx
+++ b/docs/src/content/en/reference/datasets/deleteItems.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.deleteItems()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Deletes multiple items from the dataset in a single bulk operation.
 
 ## Usage example
