--- a/docs/src/content/en/reference/datasets/get.mdx
+++ b/docs/src/content/en/reference/datasets/get.mdx
@@ -7,6 +7,8 @@ packages:
 
 # DatasetsManager.get()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Retrieves an existing dataset by ID. Throws a `MastraError` if the dataset does not exist.
 
 ## Usage example
