--- a/docs/src/content/en/reference/datasets/getExperiment.mdx
+++ b/docs/src/content/en/reference/datasets/getExperiment.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.getExperiment()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Retrieves a specific experiment (run) by its ID.
 
 ## Usage example
