--- a/docs/src/content/en/reference/datasets/getItem.mdx
+++ b/docs/src/content/en/reference/datasets/getItem.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.getItem()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Retrieves a single dataset item by ID, optionally at a specific dataset version.
 
 ## Usage example
