--- a/docs/src/content/en/reference/datasets/list.mdx
+++ b/docs/src/content/en/reference/datasets/list.mdx
@@ -7,6 +7,8 @@ packages:
 
 # DatasetsManager.list()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Lists all datasets with pagination.
 
 ## Usage example
