--- a/docs/src/content/en/reference/datasets/listExperimentResults.mdx
+++ b/docs/src/content/en/reference/datasets/listExperimentResults.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.listExperimentResults()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Lists individual item results for a specific experiment with pagination.
 
 ## Usage example
