--- a/docs/src/content/en/reference/datasets/listExperiments.mdx
+++ b/docs/src/content/en/reference/datasets/listExperiments.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.listExperiments()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Lists all experiments (runs) for this dataset with pagination.
 
 ## Usage example
