--- a/docs/src/content/en/reference/datasets/listItems.mdx
+++ b/docs/src/content/en/reference/datasets/listItems.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.listItems()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Lists items in the dataset. When a `version` is specified, returns all items at that version. Otherwise, returns paginated items from the latest version.
 
 ## Usage example
