--- a/docs/src/content/en/reference/datasets/listVersions.mdx
+++ b/docs/src/content/en/reference/datasets/listVersions.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.listVersions()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Lists all versions of the dataset with pagination.
 
 ## Usage example
