--- a/docs/src/content/en/reference/datasets/startExperiment.mdx
+++ b/docs/src/content/en/reference/datasets/startExperiment.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.startExperiment()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Runs an experiment on the dataset and waits for completion. Executes all items against a target (agent, workflow, or scorer) with optional scoring.
 
 ## Usage example
