--- a/docs/src/content/en/reference/datasets/update.mdx
+++ b/docs/src/content/en/reference/datasets/update.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.update()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Updates dataset metadata, name, description, and/or schemas. Zod schemas are automatically converted to JSON Schema.
 
 ## Usage example
