--- a/docs/src/content/en/reference/datasets/updateItem.mdx
+++ b/docs/src/content/en/reference/datasets/updateItem.mdx
@@ -7,6 +7,8 @@ packages:
 
 # dataset.updateItem()
 
+**Added in:** `@mastra/core@1.4.0`
+
 Updates an existing item in the dataset. Only the provided fields are updated. Updating an item creates a new version.
 
 ## Usage example
