--- a/docs/src/content/en/docs/observability/datasets/overview.mdx
+++ b/docs/src/content/en/docs/observability/datasets/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Datasets overview | Datasets"
+title: "Datasets Overview | Datasets"
 description: "Manage versioned test data, run experiments against agents and workflows, and track results over time."
 packages:
   - "@mastra/core"
