--- a/docs/src/content/en/docs/observability/datasets/running-experiments.mdx
+++ b/docs/src/content/en/docs/observability/datasets/running-experiments.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Running experiments | Datasets"
+title: "Running Experiments | Datasets"
 description: "Run experiments against agents or workflows, with scoring and result tracking."
 packages:
   - "@mastra/core"
