ADd more learning content updates

--- a/docs/src/learn/content/02-setup-and-first-run.mdx
+++ b/docs/src/learn/content/02-setup-and-first-run.mdx
@@ -1,4 +1,4 @@
-This lesson walks through scaffolding a Mastra project and opening Studio for the first time. You'll run the default Weather agent, get a feel for the key Studio areas, and end with a local dev environment you'll use for the rest of the course.
+Scaffold a Mastra project, run the default Weather agent, and get familiar with Studio. By the end you'll have a local dev environment set up for the rest of the course.
 
 ## Three ways to start with Mastra
 
