--- a/docs/src/learn/content/03-mastra-project-structure.mdx
+++ b/docs/src/learn/content/03-mastra-project-structure.mdx
@@ -1,4 +1,4 @@
-This lesson maps the scaffolded project to the code you'll actually edit. The Weather agent, tool, and workflow that come with `create-mastra` aren't just demo code. They're the clearest reference for how agents, tools, and workflows are structured in Mastra.
+The Weather agent, tool, and workflow that come with `create-mastra` aren't just demo code. They're the clearest reference for how agents, tools, and workflows are structured in Mastra, and the best place to start before writing your own.
 
 ## What create-mastra generates
 
