--- a/docs/src/learn/content/04-create-a-new-agent.mdx
+++ b/docs/src/learn/content/04-create-a-new-agent.mdx
@@ -1,4 +1,4 @@
-This lesson is where you stop using the scaffolded Weather agent and start building your own. You'll create the Theme Park Companion agent, register it, run it in Studio, read your first trace, and see what changes when you turn memory on.
+You'll create the Theme Park Companion agent from scratch, register it, run it in Studio, and see what changes when you turn memory on.
 
 ## Create the agent file
 
