--- a/docs/src/learn/content/06-build-with-ai.mdx
+++ b/docs/src/learn/content/06-build-with-ai.mdx
@@ -34,7 +34,7 @@ pnpm dlx skills add mastra-ai/skills
 
 ## The MCP Docs Server
 
-The **Mastra MCP Docs Server** (`@mastra/mcp-docs-server`) is a separate option. It gives MCP-capable agents direct access to Mastra's documentation, code examples, blog posts, and changelogs. It's useful for its tools, including a migration helper for upgrading between Mastra versions.
+The **Mastra MCP Docs Server** is a separate option. In addition to documentation access, it provides tools to help you migrate to newer versions of Mastra. It also includes tooling specifically for following the Mastra 101 course.
 
 For general coding assistance with Mastra, Skills perform better. Use the MCP Docs Server when you specifically want its tooling.
 
@@ -54,6 +54,6 @@ To add it manually, wire it up in your editor's MCP config:
 
 ## Go deeper
 
-- [Mastra Skills on npm](https://www.npmjs.com/package/@mastra/skills): the skills package
-- [MCP Docs Server package](https://www.npmjs.com/package/@mastra/mcp-docs-server): setup and available tools
-- [skills standard](https://skills.so): the open standard Skills are built on
+- [Build with AI](https://mastra.ai/docs/getting-started/build-with-ai): Skills, MCP Docs Server, and other options for keeping your coding agent up to date
+- [Mastra Skills](https://mastra.ai/docs/build-with-ai/skills): installation options and available skills
+- [Agent Skills standard](https://agentskills.io/home): the open standard Skills are built on
