fix(koa): add onError hook and fix shared server adapter test suite
Add onError hook support to the Koa adapter for custom error handling,
and fix pre-existing failures in the shared server adapter test suite
caused by missing path param mappings, test entities, and editor mocks
for recently added routes (stored MCP clients, prompt blocks, workspaces,
skills, scorer versions, tool providers). Excludes dataset and
skill-publish routes that require storage domains not in InMemoryStore.

--- a/docs/src/content/en/docs/server/server-adapters.mdx
+++ b/docs/src/content/en/docs/server/server-adapters.mdx
@@ -364,6 +364,7 @@ The adapter reads these settings from `mastra.getServer()`:
 |--------|-------------|
 | `auth` | Authentication config, used by `registerAuthMiddleware()`. |
 | `bodySizeLimit` | Default body size limit in bytes. Can be overridden per-adapter via `bodyLimitOptions`. |
+| `onError` | Custom error handler called when an unhandled error occurs in a route handler. See [server.onError](/reference/configuration#serveronerror). |
 
 ### Adapter constructor only
 
