--- a/docs/src/content/en/reference/configuration.mdx
+++ b/docs/src/content/en/reference/configuration.mdx
@@ -702,6 +702,8 @@ export const mastra = new Mastra({
 
 Custom error handler called when an unhandled error occurs. Use this to customize error responses, log errors to external services like Sentry, or implement custom error formatting.
 
+This hook is supported by all server adapters. The `c` parameter provides a Hono-compatible context object — for non-Hono adapters (Koa, Express, Fastify), a shim is provided with commonly used methods like `c.json()` and `c.req.path`.
+
 ```typescript title="src/mastra/index.ts"
 import { Mastra } from "@mastra/core";
 import * as Sentry from "@sentry/node";
