--- a/docs/src/content/en/guides/deployment/digital-ocean.mdx
+++ b/docs/src/content/en/guides/deployment/digital-ocean.mdx
@@ -72,7 +72,7 @@ Set up [authentication](/docs/server/auth) before exposing your endpoints public
 
 ### Prerequisites
 
-- A Droplet running Ubuntu 24+
+- A Droplet running Ubuntu 24.04 LTS or later
 - A domain name with an A record pointing to your droplet
 - A reverse proxy configured (e.g., using [nginx](https://nginx.org/))
 - SSL certificate configured (e.g., using [Let's Encrypt](https://letsencrypt.org/))
@@ -156,7 +156,7 @@ This will create a production build of Mastra's server in the `.mastra/output` d
 
 You can run the [Mastra Server](/docs/deployment/mastra-server) by running the `mastra start` command:
 
-```bash npm2yarn
+```bash
 mastra start
 ```
 
