feat: support metadata-only queries in vector stores
  Make queryVector optional in QueryVectorParams, allowing PgVector users
  to query by metadata filters alone without providing an embedding vector.
  Other vector stores throw a clear error when queryVector is omitted.

Signed-off-by: intojhanurag <aojharaj2004@gmail.com>

--- a/docs/src/content/en/reference/vectors/pg.mdx
+++ b/docs/src/content/en/reference/vectors/pg.mdx
@@ -302,9 +302,10 @@ Higher M values or efConstruction values will increase memory requirements signi
       description: "Name of the index to query",
     },
     {
-      name: "vector",
+      name: "queryVector",
       type: "number[]",
-      description: "Query vector",
+      isOptional: true,
+      description: "Query vector for similarity search. When omitted, a metadata-only query is performed using the filter parameter. At least one of queryVector or filter must be provided.",
     },
     {
       name: "topK",
