--- a/docs/src/content/en/reference/vectors/pinecone.mdx
+++ b/docs/src/content/en/reference/vectors/pinecone.mdx
@@ -141,7 +141,7 @@ The constructor accepts all [Pinecone configuration options](https://docs.pineco
       description: "Name of the index to query",
     },
     {
-      name: "vector",
+      name: "queryVector",
       type: "number[]",
       description: "Dense query vector to find similar vectors",
     },
